--- a/resources/rhdm7-only.yaml
+++ b/resources/rhdm7-only.yaml
@@ -122,6 +122,7 @@ objects:
       application: "${APPLICATION_NAME}"
     annotations:
       description: Route for Decision Central's http service.
+      haproxy.router.openshift.io/timeout: 60s
   spec:
     host: "${DECISION_CENTRAL_HOSTNAME_HTTP}"
     to:
@@ -135,6 +136,7 @@ objects:
       application: "${APPLICATION_NAME}"
     annotations:
       description: Route for Decision Central's https service.
+      haproxy.router.openshift.io/timeout: 60s
   spec:
     host: "${DECISION_CENTRAL_HOSTNAME_HTTPS}"
     to:
